unpackaged/main/default/objects/ETT_Collection_Agreement__c/ETT_Collection_Agreement__c.object-meta.xml
<CustomObject>
    <label>Collection Agreement</label>
    <nameField>
        <displayFormat>QN-{000000}</displayFormat>
        <label>Collection/Purchase Agreement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collection Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>