unpackaged/main/default/objects/ETT_Collection_Agreement__c/fields/ETT_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>ETT_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.ETT_Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Collection Agreements</relationshipLabel>
    <relationshipName>Quotation_Request</relationshipName>
    <type>Lookup</type>
</CustomField>