unpackaged/main/default/objects/ETT_Collection_Agreement__c/fields/ETT_Supplier_External__c.field-meta.xml
<CustomField>
    <fullName>ETT_Supplier_External__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ETT Supplier External</label>
    <length>250</length>
    <type>Text</type>
</CustomField>