unpackaged/main/default/objects/ETT_Collection_Agreement__c/recordTypes/ETT_Purchase_Agreement.recordType-meta.xml
<RecordType>
    <fullName>ETT_Purchase_Agreement</fullName>
    <active>true</active>
    <description>Supplier that provides tyres to ET for retreading process.Supplier consist of Internal or External Supply.</description>
    <label>Purchase Agreement</label>
</RecordType>