unpackaged/main/default/objects/ETT_Collection_Agreement__c/recordTypes/ETT_Sales_Agreement.recordType-meta.xml
<RecordType>
    <fullName>ETT_Sales_Agreement</fullName>
    <active>true</active>
    <description>ET that provides tyres to Internal/External Sales for sales process.Sales consist of Internal or External Sales.</description>
    <label>Sales Agreement</label>
</RecordType>